# AutonomousVehiclesprojects

./: .gitignore  .gitmodules  PHASE_2_GUI_DEVELOPMENT.md  PHASE_3_AI_ML_ENHANCEMENTS.md  PHASE_3_VEHICLE_INTEGRATION.md  PHASE_6_DOCUMENTATION_COMMUNITY.md  README.md  ROADMAP.md
AI Voice Assistant using Raspi4/Boot_Rootfs/boot/: boot.scr
AI Voice Assistant using Raspi4/Documentation/: HW_Req.ipynb
AI Voice Assistant using Raspi4/preparation/: boot.cmd
AI Voice Assistant using Raspi4/preparation/lastworked/: automation_hw.sh
AI_Voice_Assistant_using_Raspi4/: ONNX_TFLITE_MINIMAL_PLAN.md  QUICKSTART_REFACTORED_GUI.md  README.md  analyze.ipynb
AI_Voice_Assistant_using_Raspi4/Documentation/: GUI_REFACTORING_SUMMARY.md
AI_Voice_Assistant_using_Raspi4/Yocto/: BUILD_ERROR_ANALYSIS_AND_SOLUTION.md  BUILD_ERROR_QUICK_FIX.sh  CLEANUP_EXPLANATION.md  COMPLETE_ERROR_BREAKDOWN.md  CONVERSION_COMPLETE.md  CURRENT_STATUS_AND_NEXT_STEPS.md  DOWNLOADS_RESTORED.md  ERROR_FIX_SUMMARY.md  ERROR_VISUAL_SUMMARY.md  FINAL_SUMMARY.md  FORK_THESE_REPOS.md  HOW_TO_FORK.md  META_USERAPP_REVIEW.md  MONITOR_BUILD.sh  PLAN.md  PRESERVE_MODIFICATIONS_GUIDE.md  QT6_PACKAGE_ANALYSIS.md  README.md  README_BUILD_FIX.md  SUBMODULES_GUIDE.md  SUBMODULES_SUCCESS.md  VERIFY_BUILD_CONFIG.sh  bblayers.conf  convert_to_submodules.sh  finish_submodules_setup.sh  fix_push_conflicts.sh  local.conf  setup_submodules_interactive.sh  setup_submodules_safe.sh  setup_yocto.sh  yocto.ipynb
AI_Voice_Assistant_using_Raspi4/qt6_voice_assistant_gui/: ADVANCED_FEATURES.md  BUILD.md  CHANGELOG.md  CMakeLists.txt  COMPLETION_REPORT.md  DEPLOYMENT_UPDATE.md  FEATURES.md  PROJECT_SUMMARY.md  README.md  qml.qrc  voice-assistant.desktop
AI_Voice_Assistant_using_Raspi4/qt6_voice_assistant_gui/backend/: audio_backend.py
AI_Voice_Assistant_using_Raspi4/qt6_voice_assistant_gui/qml/: ClimateControlPanel.qml  NavigationPanel.qml  PerformanceDashboard.qml  SettingsPanel.qml  StatusIndicator.qml  TranscriptionView.qml  VoiceResponsePanel.qml  main.qml
AI_Voice_Assistant_using_Raspi4/qt6_voice_assistant_gui/src/: audioengine.cpp  audioengine.h  audioengine_old.cpp  main.cpp  networkmanager.cpp  networkmanager.h  settingsmanager.cpp  settingsmanager.h  ttsengine.h
AI_Voice_Assistant_using_Raspi4/qt6_voice_assistant_gui/tests/: CMakeLists.txt  test_audioengine.cpp  test_transcriptionmodel.cpp
AI_Voice_Assistant_using_Raspi4/whisper_backend_docker_test/: Dockerfile  README.md  TESTING_GUIDE.md  docker-compose.yml  env.example  requirements.txt
PQC_for_Secure_Automotive_Communication_on_RISC_V/: preparation.ipynb
PQC_for_Secure_Automotive_Communication_on_RISC_V/documentation/: zephyrdoc.ipynb
PQC_for_Secure_Automotive_Communication_on_RISC_V/zephyr/: pyvenv.cfg
(+2166 files in other folders)
